@@ -1,99 +1,168 @@
 package com.nusiss.neighbourlysg.service;
 
-
-import com.nusiss.neighbourlysg.NeighbourlysgBackendApplication;
+import com.nusiss.neighbourlysg.config.ErrorMessagesConstants;
 import com.nusiss.neighbourlysg.dto.SurveyDTO;
+import com.nusiss.neighbourlysg.dto.SurveyResponseDTO;
+import com.nusiss.neighbourlysg.entity.Question;
 import com.nusiss.neighbourlysg.entity.Survey;
+import com.nusiss.neighbourlysg.exception.SurveyNotFoundException;
 import com.nusiss.neighbourlysg.mapper.SurveyMapper;
 import com.nusiss.neighbourlysg.repository.SurveyRepository;
 import com.nusiss.neighbourlysg.service.impl.SurveyServiceImpl;
-import com.nusiss.neighbourlysg.util.MasterDTOTestUtil;
-import com.nusiss.neighbourlysg.util.MasterEntityTestUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-@SpringBootTest(classes = NeighbourlysgBackendApplication.class)
-class SurveyServiceImplTest {
+public class SurveyServiceImplTest {
 
 	@Mock
 	private SurveyRepository surveyRepository;
 
-	@Autowired
+	@Mock
 	private SurveyMapper surveyMapper;
 
-	private SurveyService surveyService;
+	@InjectMocks
+	private SurveyServiceImpl surveyService;
+
+	private SurveyDTO surveyDTO;
+	private Survey survey;
+	private Question question;
 
 	@BeforeEach
-	void setup() {
+	public void setUp() {
 		MockitoAnnotations.openMocks(this);
-		surveyService = new SurveyServiceImpl(surveyRepository, surveyMapper);
+
+		// Initialize test data
+		surveyDTO = new SurveyDTO();
+		survey = new Survey();
+		question = new Question();
+
+		// Set up relationships for questions if needed
+		survey.setQuestions(Arrays.asList(question));
+		question.setSurvey(survey);
 	}
 
 	@Test
-	void createSurvey_shouldReturnSurveyDTO() {
-		// Arrange
-		SurveyDTO surveyDTO = MasterDTOTestUtil.createSurveyDTO();
-		Survey savedSurvey = MasterEntityTestUtil.createSurvey();
+	public void testCreateSurvey() {
+		when(surveyMapper.toEntity(surveyDTO)).thenReturn(survey);
+		when(surveyRepository.save(survey)).thenReturn(survey);
+		when(surveyMapper.toDto(survey)).thenReturn(surveyDTO);
 
-		when(surveyRepository.save(any())).thenReturn(savedSurvey);
-		// Act
-		SurveyDTO result = surveyService.createSurvey(surveyDTO);
+		SurveyDTO createdSurvey = surveyService.createSurvey(surveyDTO);
 
-		// Assert
-		assertEquals(result.getId(),surveyDTO.getId());
+		assertNotNull(createdSurvey);
+		verify(surveyMapper).toEntity(surveyDTO);
+		verify(surveyRepository).save(survey);
+		verify(surveyMapper).toDto(survey);
 	}
 
 	@Test
-	void getAllSurveys_shouldReturnListOfSurveyDTOs() {
-		// Arrange
-		List<Survey> surveys = List.of(MasterEntityTestUtil.createSurvey());
+	public void testGetAllSurveys() {
+		Survey survey1 = new Survey();
+		Survey survey2 = new Survey();
+		List<Survey> surveys = Arrays.asList(survey1, survey2);
+		List<SurveyDTO> surveyDTOs = Arrays.asList(new SurveyDTO(), new SurveyDTO());
 
 		when(surveyRepository.findAll()).thenReturn(surveys);
+		when(surveyMapper.toDto(survey1)).thenReturn(surveyDTOs.get(0));
+		when(surveyMapper.toDto(survey2)).thenReturn(surveyDTOs.get(1));
 
-		// Act
 		List<SurveyDTO> result = surveyService.getAllSurveys();
 
-		// Assert
-		assertEquals(1, result.size());
+		assertEquals(2, result.size());
+		verify(surveyRepository).findAll();
 	}
 
 	@Test
-	void getSurveyById_shouldReturnSurveyDTO() {
-		// Arrange
-		Survey survey = MasterEntityTestUtil.createSurvey();
+	public void testGetSurveyById_Success() {
+		Long surveyId = 1L;
+		when(surveyRepository.findById(surveyId)).thenReturn(Optional.of(survey));
+		when(surveyMapper.toDto(survey)).thenReturn(surveyDTO);
 
-		when(surveyRepository.findById(any())).thenReturn(Optional.of(survey));
+		Optional<SurveyDTO> result = surveyService.getSurveyById(surveyId);
 
-
-		// Act
-		Optional<SurveyDTO> result = surveyService.getSurveyById(1L);
-
-		// Assert
 		assertTrue(result.isPresent());
+		assertEquals(surveyDTO, result.get());
+		verify(surveyRepository).findById(surveyId);
 	}
 
 	@Test
-	void getSurveyById_shouldReturnEmptyOptional() {
-		// Arrange
-		when(surveyRepository.findById(any())).thenReturn(Optional.empty());
+	public void testGetSurveyById_NotFound() {
+		Long surveyId = 1L;
+		when(surveyRepository.findById(surveyId)).thenReturn(Optional.empty());
 
-		// Act
-		Optional<SurveyDTO> result = surveyService.getSurveyById(1L);
+		Optional<SurveyDTO> result = surveyService.getSurveyById(surveyId);
 
-		// Assert
 		assertFalse(result.isPresent());
+		verify(surveyRepository).findById(surveyId);
+	}
+
+	@Test
+	public void testUpdateSurvey() {
+		when(surveyMapper.toEntity(surveyDTO)).thenReturn(survey);
+		when(surveyRepository.save(survey)).thenReturn(survey);
+		when(surveyMapper.toDto(survey)).thenReturn(surveyDTO);
+
+		SurveyDTO updatedSurvey = surveyService.updateSurvey(surveyDTO);
+
+		assertNotNull(updatedSurvey);
+		verify(surveyMapper).toEntity(surveyDTO);
+		verify(surveyRepository).save(survey);
+		verify(surveyMapper).toDto(survey);
+	}
+
+	@Test
+	public void testDeleteSurveyById_Success() {
+		Long surveyId = 1L;
+		when(surveyRepository.findById(surveyId)).thenReturn(Optional.of(survey));
+
+		surveyService.deleteSurveyById(surveyId);
+
+		verify(surveyRepository).delete(survey);
+	}
+
+	@Test
+	public void testDeleteSurveyById_NotFound() {
+		Long surveyId = 1L;
+		when(surveyRepository.findById(surveyId)).thenReturn(Optional.empty());
+
+		SurveyNotFoundException exception = assertThrows(SurveyNotFoundException.class, () -> {
+			surveyService.deleteSurveyById(surveyId);
+		});
+
+		assertEquals(ErrorMessagesConstants.SURVEY_NOT_FOUND + surveyId, exception.getMessage());
+		verify(surveyRepository, never()).delete(any(Survey.class));
+	}
+
+	@Test
+	public void testSaveSurveyResponse() {
+		SurveyResponseDTO responseDTO = new SurveyResponseDTO();
+		// Assuming saveSurveyResponse is implemented, write necessary code to test it
+		// For now, we will just verify it doesn't throw an error
+		assertDoesNotThrow(() -> surveyService.saveSurveyResponse(responseDTO));
+	}
+
+	@Test
+	public void testGetSurveyResponses() {
+		Long surveyId = 1L;
+		List<SurveyResponseDTO> responses = Collections.emptyList();
+
+		// Assuming getSurveyResponses is implemented, we just return an empty list for now
+		List<SurveyResponseDTO> result = surveyService.getSurveyResponses(surveyId);
+
+		assertEquals(responses, result);
+		// Verify if the method calls to fetch responses if implemented
+		// verify(surveyRepository).findResponsesBySurveyId(surveyId); // Example verification if method existed
 	}
 }
